:bug: fix gap below footer
Not all situations but many :disappointed:

--- a/_sass/partials/_footer.scss
+++ b/_sass/partials/_footer.scss
@@ -11,7 +11,6 @@ footer[role="contentinfo"] {
   padding: 1rem;
   color: white;
   background: #111;
-  transform: translateY(1px);
 
   // Footer content
   section {
